Aggiustata griglia su mobile. TODO: fixare video full screen su viewport visibile

--- a/public/css/stile.scss
+++ b/public/css/stile.scss
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 
+/* Variables */
+$phone-breakpoint: 360px;
+$tablet-breakpoint: 768px;
+
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -12,8 +16,8 @@ header {
   top: 0;
   z-index: 1;
   background-color: #fff;
-  border-bottom:1px solid rgba(0,0,0,0.3);
-
+  //border-bottom:1px solid rgba(0,0,0,0.3);
+  box-shadow: 0 3px 3px rgba(0,0,0,0.2);
 
   h1 {
     text-align: center;
@@ -31,16 +35,29 @@ main {
 
   &.container-fluid {
     margin: 0;
+    padding: 0;
+  }
+
+  #intro {
+    button {
+      display: none;
+    }
+
+    a#movebutton {
+      position: fixed;
+      background: red;
+      padding: 3vw 2vw;
+    }
   }
 
   #grid {
     background-color: rgba(255,255,255,0.3);
 
+    // BOH! Compare un'altra scrollbar!
+    //padding-bottom: 10vh;
+
     img {
-      width: 200px;
-      height:auto;
-      margin: 0;
-      padding: 0;
+      width: 100%;
     }
   }
 
@@ -62,16 +79,37 @@ main {
 
 footer {
   background-color: #fff;
-  border-top: 2px solid rgba(0,0,0,0.3);
+  //border-top: 2px solid rgba(0,0,0,0.3);
+  box-shadow: 0 -3px 3px rgba(0,0,0,0.2);
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 6vmax;
   padding:1em;
 
+
   h4 {
     margin: 0;
     font-size: 3.3vw;
   }
 
+}
+
+/* Media queries */
+@media (max-device-width: $phone-breakpoint) {
+  header {
+    h1 {
+      font-size: 4vh;
+    }
+
+  }
+
+  main {
+    #grid {
+      img {
+        width:100%;
+        margin-bottom:1.5vh;
+      }
+    }
+  }
 }
